--- a/src/njk/_includes/nav.njk
+++ b/src/njk/_includes/nav.njk
@@ -1,10 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{{ relative_path }}index.html">Navbar</a>
+  <a class="navbar-brand" href="{{ relative_path }}index.html">Queen</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
+       <li class="nav-item">
+         <a class="nav-link" href="{{ relative_path }}pirate-ships.html">Freddie Mercury</a>
+      </li>
+      <li class="nav-item">
+         <a class="nav-link" href="{{ relative_path }}index-example.html">Brian May</a>
+      </li>
+       <li class="nav-item">
+         <a class="nav-link" href="{{ relative_path }}pirate-ships.html">Roger Taylor</a>
+      </li>
+      <li class="nav-item">
+         <a class="nav-link" href="{{ relative_path }}index-example.html">John Deacon</a>
+      </li>
+      <!-- Does this need to be included? Should I do a dropdown called "Members," or should I just list them and the "tour" page all out as individual pages? Can I take the dropdown out?
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Library books
@@ -14,7 +27,7 @@
           <a class="dropdown-item" href="{{ relative_path }}books/{{ book.slug}}.html">{{ book.title }}</a>
           {% endfor %}
         </div>
-      </li>
+      </li> -->
     </ul>
   </div>
 </nav>
