--- a/src/scss/_jumbotron.scss
+++ b/src/scss/_jumbotron.scss
@@ -1,10 +1,14 @@
 .jumbotron.banner {
-  background: url(../img/queen-band-early.jpg) no-repeat center;
+  background: url(../img/queen-live-on-stage.jpg) no-repeat center;
   background-size: cover;
   color: white;
-  padding-top: 12rem
+  padding-top: 15rem
 }
 
 .jumbotron {
   margin-bottom: 30px;
+  margin-top: auto;
+  h1 {font-family: 'New Rocker', cursive;
+    font-size: 70px;
+  }
 }
