--- a/src/njk/_includes/jumbotron.njk
+++ b/src/njk/_includes/jumbotron.njk
@@ -1,6 +1,4 @@
 <div class="jumbotron banner text-center">
-  <h1>Queen</h1>
+  <h1 id="jumbotron-title">Queen</h1>
   <p>The greatest band of all time.</p>
 </div>
-
-<!-- Maybe do a carousel for additional bootstrap thing? -->
