--- a/src/njk/_templates/bake-band-members.njk
+++ b/src/njk/_templates/bake-band-members.njk
@@ -14,6 +14,8 @@
       </div>
       <div class="col-sm-8">
           <h1>{{ name }}</h1>
+          <h3>{{instruments}} {{tenure}}</h3>
+          <h5>Born in {{birthplace}} on {{birthdate}}</h5>
           <p>{{ description | safe }}</p>
       </div>
     </div>
