--- a/src/njk/tour-dates.njk
+++ b/src/njk/tour-dates.njk
@@ -4,9 +4,6 @@
 
 {% block page_description %}Table of 2021 tour dates.{% endblock %}
 
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
-<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.js"></script>
-
 {% block content %}
 <article class="container">
   <h1>2021 Tour Dates</h1>
@@ -29,9 +26,9 @@
     </tbody>
   </table>
   <script>
-      $(document).ready( function () {
-      $('#tour').DataTable();
-      } );
+      jQuery(document).ready(function() {
+    jQuery('#tour').DataTable();
+    } );
   </script>
 </article>
 {% endblock %}
