--- a/src/njk/_includes/nav.njk
+++ b/src/njk/_includes/nav.njk
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg">
   <a class="navbar-brand" href="{{ relative_path }}index.html">Queen</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler navbar-light bg-light" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
