--- a/src/njk/_templates/bake-band-members.njk
+++ b/src/njk/_templates/bake-band-members.njk
@@ -4,7 +4,7 @@
 
 {% block page_title %}{{ name }}{% endblock %}
 
-{% block page_description %}{{ tenure }} {% endblock %}
+{% block page_description %}About {{ name }} {% endblock %}
 
 {% block content %}
   <article class="container">
