--- a/src/njk/tour-dates.njk
+++ b/src/njk/tour-dates.njk
@@ -1,6 +1,6 @@
 {% extends '_templates/base.njk' %}
 
-{% block page_title %}Tour Dates{% endblock %}
+{% block page_title %}Queen Tour Dates{% endblock %}
 
 {% block page_description %}Table of 2021 tour dates.{% endblock %}
 
