--- a/src/njk/_includes/nav.njk
+++ b/src/njk/_includes/nav.njk
@@ -5,7 +5,7 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav mr auto mt-2 mt-lg-0">
+    <ul class="navbar-nav mr auto">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Members
